--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/create_course_structure.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/create_course_structure.html
@@ -100,7 +100,7 @@
 
     .largesize{
       /*font-size:22px;*/
-      color: #e0e0e0 !important;
+      color: #808080 !important;
     }
 
     span{
@@ -133,7 +133,7 @@
     .lbl_of_cs, .lbl_of_css, .contains-unit {
       white-space: nowrap;
       overflow: hidden;
-      width: 35% !important;
+      width: 70% !important;
       /*color:#0b8a91 !important;*/
       text-overflow: ellipsis;
       font-size: large;
