--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/node_ajax_content.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/node_ajax_content.html
@@ -2,12 +2,48 @@
 {% load i18n %}
 {% load cache %}
 
+{% get_download_filename node as download_filename %}
 {% get_schema node as schema %}
 {% get_group_name groupid as group_name_tag %}
 {% check_is_gstaff groupid request.user as is_gstaff %}
+
 <script type="text/javascript" src="/static/ndf/bower_components/ckeditor/ckeditor.js"></script>
     <script type="text/javascript" src="/static/ndf/bower_components/ckeditor/config.js"></script>
+<script type="text/javascript">
+  $( document ).ready(function() {
     
+    
+    var x = location.href;
+    var hostname = location.host;
+
+    x = "https://www.facebook.com/dialog/feed?app_id=146799965703412&redirect_uri=http://www.metastudio.org/home/&link="+location.href+"&caption=  {{node.name}}&description={{node.content|safe}}&picture=" + hostname + "{% url 'read_file' group_name_tag node download_filename %}";
+    $(".share_link").attr("href",x);
+
+
+    hrefs = "href=https://twitter.com/share"; 
+    b = "large"; 
+    c = location.href;
+    d = location.href+"tweet-button";
+    e = "atMetaStudio";
+    f = "twitterapi,twitter"; 
+    g= "example,demo";
+    h="hello ghello";
+    $(".twitter-share-button").attr("href",a);
+    $(".twitter-share-button").attr("data-size",b);
+    $(".twitter-share-button").attr("data-url",c);
+    $(".twitter-share-button").attr("data-count-url",d);
+    $(".twitter-share-button").attr("data-via",e);
+    $(".twitter-share-button").attr("data-related",f);
+    $(".twitter-share-button").attr("data-hashtags",g);
+    $(".twitter-share-button").attr("data-text",h);
+  
+});
+</script>
+<script type="text/javascript">
+!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');
+</script>    
+
+
 <style type="text/css">
   legend{
       text-align: center;
@@ -115,7 +151,6 @@
 
   <div class="row">
 
-    {% get_download_filename node as download_filename %}
     {% if topic %}
       {% get_filters_data "Topics" as filter_dict %}
 
@@ -506,16 +541,19 @@
                   Download
                 </a>
                 {% endif %}
-                {% comment %}
                {% get_gstudio_social_share_resource as social_share %}
                   {% if social_share %}
                     <span>
                         <a class = "share_link" href="#" accesskey="l" target="_blank"  title="Share on Facebook">
                         <img src="/static/ndf/images/Facebook_logo.png"  width="30px">
+
                         </a>
                       </span>
+                      <a class="twitter-share-button"href="" data-size=""  data-url="" data-count-url="" data-via="" data-related=""
+                     data-hashtags="" data-text="">TweetNew</a>
+
                   {% endif %}
-              {% endcomment %}
+                    
                 {% endif %}
 
           {%  else %}
