some twitter parameters hiding

--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/node_ajax_content.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/node_ajax_content.html
@@ -26,16 +26,16 @@
     d = location.href+"tweet-button";
     e = "atMetaStudio";
     f = "twitterapi,twitter"; 
-    g= "example,demo";
-    h="hello ghello";
+    // g= "{{node.tags|striptags}}";
+    // h="hello ghello";
     $(".twitter-share-button").attr("href",a);
     $(".twitter-share-button").attr("data-size",b);
     $(".twitter-share-button").attr("data-url",c);
     $(".twitter-share-button").attr("data-count-url",d);
     $(".twitter-share-button").attr("data-via",e);
     $(".twitter-share-button").attr("data-related",f);
-    $(".twitter-share-button").attr("data-hashtags",g);
-    $(".twitter-share-button").attr("data-text",h);
+    // $(".twitter-share-button").attr("data-hashtags",g);
+    // $(".twitter-share-button").attr("data-text",h);
   
 });
 </script>
