redirecting after edit partner to dashboard

--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/create_partner.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/create_partner.html
@@ -393,7 +393,7 @@
                     'csrfmiddlewaretoken': "{{csrf_token}}",   
                 },
               success: function(data) {
-                  location.reload();
+                  location.href = "{% url 'groupchange' node.pk %}"
                 }
 
                
