--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/node_ajax_content.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/node_ajax_content.html
@@ -6,8 +6,8 @@
 {% get_schema node as schema %}
 {% get_group_name groupid as group_name_tag %}
 {% get_gstudio_twitter_via as twitter_via %}
-{% get_gstudio_facebook_app_id as fb_app_id %}
 {% check_is_gstaff groupid request.user as is_gstaff %}
+{# % get_gstudio_facebook_app_id as fb_app_id % #}
 
 <script type="text/javascript" src="/static/ndf/bower_components/ckeditor/ckeditor.js"></script>
     <script type="text/javascript" src="/static/ndf/bower_components/ckeditor/config.js"></script>
@@ -18,8 +18,8 @@
     var x = location.href;
     var hostname = location.host;
 
-    x = "https://www.facebook.com/dialog/feed?app_id={{fb_app_id}}&redirect_uri=http://www.metastudio.org/home/&link="+location.href+"&caption=  {{node.name}}&description={{node.content|safe}}&picture=" + hostname + "{% url 'read_file' group_name_tag node download_filename %}";
-    $(".share_link").attr("href",x);
+    // x = "https://www.facebook.com/dialog/feed?app_id={{fb_app_id}}&redirect_uri=http://www.metastudio.org/home/&link="+location.href+"&caption=  {{node.name}}&description={{node.content|safe}}&picture=" + hostname + "{% url 'read_file' group_name_tag node download_filename %}";
+    // $(".share_link").attr("href",x);
 
 
     hrefs = "href=https://twitter.com/share"; 
