--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/groupdashboard.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/groupdashboard.html
@@ -4,7 +4,7 @@
 {% load ndf_tags %}
 
 <!-- from django.contrib.auth.decorators import login_required -->
-{% block title %} Group Dashboard {% endblock %}
+{% block title %} {{group_name_tag}} Group Dashboard {% endblock %}
 
 {% block head %}
 
