multiple resources delete button added

--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/file.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/file.html
@@ -2,8 +2,8 @@
 {% load i18n %}
 {% load ndf_tags %}
 {% get_group_name groupid as group_name_tag %}
-
-
+{% check_is_gstaff groupid request.user as is_gstaff %}
+{% get_node groupid as group_obj %}
 {% block title %} {{title}} {% endblock %}
 
 
@@ -252,6 +252,13 @@ margin-top:5px !important;
       <div class="coll_label row" style="display:none;">
         <span class="small-12 columns">Create Collection</span>
         <div class="small-11 columns"><input type="text" class="coll_value" placeholder="Enter collection name" name="coll_name"/></div><a class="create_coll"><span class="fi-check" style="color:green;"></span></a>
+
+        {% if group_obj.created_by == request.user.id or user.is_superuser %}
+        <div class="small-11 columns">
+                <a class="tiny button radius right-btn delete-multiple-files" title="Delete  {{node.member_of_names_list.0}}">{% trans 'Delete Files' %}</a>
+        </div>
+        {% endif %}
+        
       </div>
     </ul>
   </div>
@@ -740,6 +747,41 @@ margin-top:5px !important;
   {% if is_video %}
     alert("Your video file uploaded succesfully, But still in process, play video about 1 hour after");
   {% endif %}
+
+  $(".delete-multiple-files").click(function(){
+   // var coll_node = $(".coll_value").val()
+      var coll_arr = []
+      $('.filenode:checked').each(function() {
+        coll_arr.push($(this).val());
+      });
+      // alert(coll_arr);
+
+      var r = confirm("Do you want to save the collection of selected elements");
+      if (r == true) {
+          x = "Your collection is saved successfully";
+          $.ajax({
+            type: "POST",
+            url: "{% url 'delete_multiple_resources' group_id %}",
+            datatype: "html",
+            data:{
+              collection: coll_arr,
+              csrfmiddlewaretoken: '{{ csrf_token }}'
+            },
+            success: function(data) {
+              alert("File(s) deleted successfully");
+              location.reload();
+
+            }
+          });
+
+          
+      } else {
+          x = "Cancelled";
+      }
+  })
+
+
+
 
 // </script>
 
