--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/node_ajax_content.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/node_ajax_content.html
@@ -7,7 +7,7 @@
 {% get_group_name groupid as group_name_tag %}
 {% get_gstudio_twitter_via as twitter_via %}
 {% check_is_gstaff groupid request.user as is_gstaff %}
-{# % get_gstudio_facebook_app_id as fb_app_id % #}
+{% get_gstudio_facebook_app_id as fb_app_id %}
 
 <script type="text/javascript" src="/static/ndf/bower_components/ckeditor/ckeditor.js"></script>
     <script type="text/javascript" src="/static/ndf/bower_components/ckeditor/config.js"></script>
@@ -18,15 +18,29 @@
     var x = location.href;
     var hostname = location.host;
 
-    // x = "https://www.facebook.com/dialog/feed?app_id={{fb_app_id}}&redirect_uri=http://www.metastudio.org/home/&link="+location.href+"&caption=  {{node.name}}&description={{node.content|safe}}&picture=" + hostname + "{% url 'read_file' group_name_tag node download_filename %}";
-    // $(".share_link").attr("href",x);
+    x = "https://www.facebook.com/dialog/feed?app_id=146799965703412&redirect_uri=http://www.metastudio.org/home/&link="+location.href+"&caption=  {{node.name}}&description={{node.content|safe}}&picture=" + hostname + "{% url 'read_file' group_name_tag node download_filename %}";
+    $(".share_link").attr("href",x);
 
 
     hrefs = "href=https://twitter.com/share"; 
     b = "large"; 
-    c = location.href;
-    d = location.href+"tweet-button";
     e = "atMetaStudio";
+    selected_child = window.location.search.replace("?selected=", "");
+    if(selected_child){
+      $(".twitter-share-button").remove();
+      d = location.hostname  + ":8000" + "/" + "{{group_id}}" + "/" + "file" + "/" + selected_child +"tweet-button";
+      parent_div = $(".share_link");
+      console.log(parent_div);
+      parent_div.append("<a class='twitter-share-button' href='' data-size=''  data-url='' data-count-url='' data-via='' data-related=''data-hashtags='' data-text=''>TweetNew</a>");
+      $(document).ready();
+      c = location.hostname  + ":8000" + "/" + "{{group_id}}" + "/" + "file" + "/" + selected_child; 
+    }
+    else{
+      
+      d = location.href+"tweet-button";
+      c = location.href;
+    }
+    console.log(selected_child);
     f = "twitterapi,twitter"; 
     // g= "{{node.tags|striptags}}";
     // h="hello ghello";
@@ -38,11 +52,11 @@
     $(".twitter-share-button").attr("data-related",f);
     // $(".twitter-share-button").attr("data-hashtags",g);
     // $(".twitter-share-button").attr("data-text",h);
+!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');
   
 });
 </script>
 <script type="text/javascript">
-!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');
 </script>    
 
 
@@ -566,11 +580,10 @@
        <br>
         {% get_gstudio_social_share_resource as social_share %}
                   {% if social_share and "Group" not in node.member_of_names_list and "PartnerGroup" not in node.member_of_names_list %}
-                       {% comment %}  <a class = "share_link" href="#" accesskey="l" target="_blank"  title="Share on Facebook">
+                         <a class = "share_link" href="#" accesskey="l" target="_blank"  title="Share on Facebook">
                         <img src="/static/ndf/images/Facebook_logo.png"  width="30px">
-                        {% endcomment %}
                         </a>
-                      <a class="twitter-share-button"href="" data-size=""  data-url="" data-count-url="" data-via="" data-related=""
+                      <a class="twitter-share-button" href="" data-size=""  data-url="" data-count-url="" data-via="" data-related=""
                      data-hashtags="" data-text="">TweetNew</a>
 
                   {% endif %}
