hide fb button till app approval

--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/node_ajax_content.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/node_ajax_content.html
@@ -7,10 +7,11 @@
 {% get_group_name groupid as group_name_tag %}
 {% get_gstudio_twitter_via as twitter_via %}
 {% check_is_gstaff groupid request.user as is_gstaff %}
-{% get_gstudio_facebook_app_id as fb_app_id %}
+{#% get_gstudio_facebook_app_id as fb_app_id %#}
 
 <script type="text/javascript" src="/static/ndf/bower_components/ckeditor/ckeditor.js"></script>
     <script type="text/javascript" src="/static/ndf/bower_components/ckeditor/config.js"></script>
+{% comment %}
 <script type="text/javascript">
   $( document ).ready(function() { 
     var x = location.href;
@@ -19,6 +20,7 @@
     $(".share_link").attr("href",x);  
 });
 </script>
+{% endcomment %}
 
 <style type="text/css">
   legend{
@@ -541,9 +543,12 @@
         {% get_gstudio_social_share_resource as social_share %}
                   {% if social_share and "Group" not in node.member_of_names_list and "PartnerGroup" not in node.member_of_names_list %}
                          <div class="large-12 columns row">
+                           {% comment %}
                            <a class = "share_link" href="#" accesskey="l" target="_blank"  title="Share on Facebook">
+                           }
                           <img src="/static/ndf/images/Facebook_logo.png"  width="30px">
                           </a>
+                           {% endcomment %}
                            
                          </div>
                         <div class="large-6 columns">
