--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/node_details_base.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/node_details_base.html
@@ -102,10 +102,12 @@
       <div class="repository-title large-4 columns" style="width:100%;font-size:1.2em">Teaches</div><br><br>
       <ul style="list-style: none; border-bottom: solid thin #ddd;">
         {% for each_topic in node.teaches %}
+          {% if each_topic.pk %}
             {% get_topic_breadcrumb_hierarchy each_topic.pk as topic_prior_hier %}
-          <li style="border-bottom: solid thin #ddd;">
-            <a href="{% url 'topic_details' group_name_tag each_topic.pk %}?nav_li={{topic_prior_hier}}" >{% trans each_topic.name %}</a>
-          </li>
+            <li style="border-bottom: solid thin #ddd;">
+              <a href="{% url 'topic_details' group_name_tag each_topic.pk %}?nav_li={{topic_prior_hier}}" >{% trans each_topic.name %}</a>
+            </li>
+          {% endif %}
         {% endfor %}
       </ul>
     </div>
