--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/jhapp.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/jhapp.html
@@ -3,8 +3,15 @@
 {% load cache %}
 
 {% load ndf_tags %}
-
-
+{% get_group_name groupid as group_name_tag %}
+{% block related_content %}
+  <div class="large-12 columns">
+  <a href="{% url 'uploadZapp' group_name_tag %}" class="tiny expand button radius">
+            {% trans "Upload Jhapp" %}
+          </a>
+  	
+  </div>
+{% endblock %}
 {% block body_content %} 
   jhapp
 {% endblock %}
