--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/jhapp.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/jhapp.html
@@ -6,7 +6,7 @@
 {% get_group_name groupid as group_name_tag %}
 {% block related_content %}
   <div class="large-12 columns">
-  <a href="{% url 'uploadZapp' group_name_tag %}" class="tiny expand button radius">
+  <a href="{% url 'uploadjhapp' group_name_tag %}" class="tiny expand button radius">
             {% trans "Upload Jhapp" %}
           </a>
   	
