transcript button added in action panel

--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/action_panel.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/action_panel.html
@@ -175,6 +175,7 @@
 							<!-- If resource is already under moderation, don't show cross-publish button -->
 
 								<span  title="{% trans 'Publish this resource in other group/s' %}" class="has-tip tip-bottom"><a id="switch_group" class="tiny button radius mod-btn" data-reveal-id="publish_resource"> {% trans "Cross Publish" %}</a></span>
+								
 								<div id="publish_resource" class="reveal-modal" data-reveal style="position:absolute;"> 
 									<h4>{% trans "Select Groups" %}</h4>
 									<div id="switchgrp" class="content">
@@ -188,6 +189,16 @@
 								<input type="button" class="tiny button radius mod-btn secondary disabled" title="{% trans 'You are not authorized for this action' %}" value="{% trans 'Cross Publish' %}">
 							{% endif %}
 						{% endif %}
+						{% get_attribute_value node.pk 'has_transcript' as node_transcript %}
+						<a id="add_transcript-id" class="tiny button radius mod-btn" data-reveal-id="add_transcript"> {% trans "Add Transcript" %}</a>
+						<div id="add_transcript" class="reveal-modal" data-reveal style="position:absolute;"> 
+						 	<a class="close-reveal-modal" aria-label="Close">&#215;</a>
+						 	<textarea  id="trans-textarea" >
+								{{node_transcript}}
+							</textarea> 
+							<input type="button" class="tiny button radius add-trans"  value="{% trans 'Add' %}">
+							<input type="button" class="tiny button radius "  value="{% trans 'Cancel' %}">
+						</div>
 
 				</div>
 				{% endif %}
@@ -533,6 +544,28 @@
     $(document).on("click", "#btnConfirmNo", function() {
         set_href = false;
         $("#deleteModal").foundation('reveal', 'close');
+    });
+
+    $(document).on("click", ".add-trans", function() {
+			var trans_text = $('#trans-textarea').val();
+			$.ajax({
+                    type: "POST",
+                    url: "{% url 'add_transcript' group_id  %}",
+                    datatype: "html",
+                    data:{
+                           csrfmiddlewaretoken: '{{ csrf_token }}',
+                           nodeid:'{{node.pk}}',
+                           transcript_text:trans_text,
+
+                      },
+                  success: function(data) {
+                  		alert("Transcript succesfully added");
+                  		 $('.close-reveal-modal').click();
+
+                  }
+
+            });
+		
     });
 
 
