--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/node_ajax_content.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/node_ajax_content.html
@@ -298,20 +298,14 @@
                 </video>
               {% elif 'video' in node.if_file.mime_type %}
 
-                <video  id="video-area" width="768" height="432" class="video-js vjs-default-skin vjs-big-play-centered" data-setup='{ "autoplay": false, "preload": "metadata" }' poster="{% url 'getvideoThumbnail' group_name_tag node %}" controls buffered>
-                  <source src="{{MEDIA_URL}}{{node.if_file.mid.relurl}}" type="video/webm">
-                  <source src="{{MEDIA_URL}}{{node.if_file.original.relurl}}" type="video/ogg">
-                  <source src="{{MEDIA_URL}}{{node.if_file.original.relurl}}" type="video/mp4">
-                  <source src="{{MEDIA_URL}}{{node.if_file.original.relurl}}" type="{{node.if_file.mime_type}}">
-                  {% trans "Your browser does not support the video tag." %}
-                </video>
+                {% include 'ndf/widget_video_player.html' with video_obj=node %}
                 {% if node.created_by == request.user.id or is_gstaff %}
                   <dl class="accordion" data-accordion>
                       <dd class="accordion-navigation" data-options="deep_linking:true">
                             <a href="#panel1" style="background-color: #2980B9;color:#FFF;width:20%">Change Thumbnail</a>
                             <div id="panel1" class="content" style="height:210px">
                               {% get_relation_value node.pk 'has_thumbnail' as grel_dict %}
-                              {% include 'ndf/video_thumbnail.html' with grel_dict=grel_dict video_id="video-area" group_id=group_id parent_node=node.pk %}                
+                              {% include 'ndf/video_thumbnail.html' with grel_dict=grel_dict video_id=node.pk group_id=group_id parent_node=node.pk %}                
                             </div>
                       
                       </dd>
@@ -321,9 +315,7 @@
                  
                 {% endif %}
               {% elif 'audio' in node.if_file.mime_type %}
-                <audio src="{{MEDIA_URL}}{{node.if_file.original.relurl}}" controls loop>
-                  <p>{% trans 'Your browser does not support the audio element' %} </p>
-                </audio>
+                {% include 'ndf/widget_audio_player.html' with audio_obj=node %}
               {% elif 'html' in node.if_file.mime_type %}
                 <iframe id="html-res-iframe" width="100%" seamless="seamless" src="{{MEDIA_URL}}{{node.if_file.original.relurl}}">
                   <p>{% trans 'Your browser does not support the audio element' %} </p>
