attach custom thumbnail to video changed as per new templates

--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/video_thumbnail.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/video_thumbnail.html
@@ -16,6 +16,7 @@
         </div>
 </div>  
   </div>
+  {{video_id}}
        <div class="large-12 columns">
           <a class="button" id="snap" onclick="startScreenshot()" value="">take snapshot</a>
           <a class="button" style="display:none" id="save-snap" onclick="saveScreenshot()" value="">save snapshot</a>
@@ -35,6 +36,7 @@ function initScreenshot() {
   videoWidth = video_obj.videoWidth;
   canvas.width = 120;
   canvas.height = 120;
+  console.log(video_obj);
 }
 
 function grabScreenshot() {
