--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/widget_video_player.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/widget_video_player.html
@@ -122,7 +122,7 @@ transform: rotate(90deg);
 <div class="video-player-area" id="video-player-{{video_obj.pk}}">
 {% if 'video' in video_obj.if_file.mime_type %}
 	{% get_attribute_value video_obj.pk 'has_transcript' as node_transcript %}
-	<video width="768" height="432" controls="" id="{{video_obj.pk}} onseeked="myFunction()" onseeking="myFunction()" preload="metadata">
+	<video width="768" height="432" controls="" id="{{video_obj.pk}}" onseeked="myFunction()" onseeking="myFunction()" preload="metadata">
 		<source src="{{MEDIA_URL}}{{video_obj.if_file.original.relurl}}" type="video/webm" />
         <source src="{{MEDIA_URL}}{{video_obj.if_file.original.relurl}}" type="video/ogg" />
         <source src="{{MEDIA_URL}}{{video_obj.if_file.original.relurl}}" type="video/mp4" />
@@ -139,7 +139,7 @@ transform: rotate(90deg);
 		<a  class="tiny button radius mod-btn" data-reveal-id="add_transcript{{video_obj.pk}}"> {% trans "Add Transcript" %}</a>
 						<div id="add_transcript{{video_obj.pk}}" class="reveal-modal" data-reveal style="position:absolute;"> 
 						 	<a class="close-reveal-modal" aria-label="Close">&#215;</a>
-						 	<textarea id="{{video_obj.pk}}">{{node_transcript}}</textarea> 
+						 	<textarea>{{node_transcript}}</textarea> 
 							<input onclick="add_transcript_func(this)" type="button" class="tiny button radius add-trans" data-src ="{{video_obj}}"   value="{% trans 'Add' %}">
 							<input type="button" class="tiny button radius "  value="{% trans 'Cancel' %}">
 						</div>
