gattribute value added

--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/widget_video_player.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/widget_video_player.html
@@ -127,6 +127,7 @@ transform: rotate(90deg);
         <source src="{{MEDIA_URL}}{{video_obj.if_file.original.relurl}}" type="video/ogg" />
         <source src="{{MEDIA_URL}}{{video_obj.if_file.original.relurl}}" type="video/mp4" />
 	</video>
+	{% get_attribute_value video_obj.pk 'has_transcript' as node_transcript %}
 	{% if node_transcript %}
 		<form class="trans-form">
 			<input align="right" id="toggler" type="checkbox" /> 
